# flask-social-oauth

./: LISENCE  README.md  pyproject.toml
.github/: FUNDING.yml
src/flask_social_auth/: helpers.py
src/flask_social_login/: __init__.py  handlers.py
src/flask_social_oauth/: __init__.py  config.py  handlers.py
