[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flask_social_auth"
version = "0.2.0"
authors = [{ name = "Om Mishra", email = "hello@om-mishra.com" }]
description = "Flask Social Login is a Python package that simplifies the integration of social login functionality into Flask web applications. With support for popular social authentication providers like Google, GitHub, and Discord, Flask Social Login streamlines the authentication process for users and enables seamless access to your web application."
readme = "README.md"
requires-python = ">=3.1"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "Framework :: Flask",
]
dependencies = [
  "flask",
  "urllib3",
  "requests",
]
keywords = ["flask", "social", "auth", "login", "oauth", "google", "github", "discord"]


[project.urls]
Homepage = "https://docs.om-mishra.com/flask-social-auth"
Issues = "https://github.com/om-mishra7/flask-social-auth/issues"
Repository = "https://github.com/om-mishra7/flask-social-auth"


